# AFMTrainer

./: .gitignore  LICENSE  LINUX_SETUP.md  README.md  linux_uv_safe.py  pyproject.toml  requirements-toolkit.txt  run-linux.py  run.py  run_linux.py  run_linux_fixed.py  start_linux_safe.sh  test_imports.py  theme_demo.py
afm_trainer/: __init__.py  afm_trainer_gui.py  config_manager.py  error_handler.py  export_handler.py  file_manager.py  training_controller.py  wandb_integration.py
