[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "afm-trainer"
version = "0.2.0"
description = "GUI wrapper for Apple Foundation Models Adapter Training Toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # GUI and UI components
    "sv-ttk>=2.6.0",
    "matplotlib>=3.7.0",
    "tqdm",
    
    # Core data processing
    "pydantic",
    "notebook",
    
    # Monitoring and logging
    "wandb>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
]

[project.scripts]
afm-trainer = "afm_trainer.afm_trainer_gui:main"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100